--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-PORT = 3000
+PORT = 8000
+BASE_URL_WSL = http://172.22.126.136:8000/api/v1/
 
 MONGO_URI = "mongodb+srv://admin:sourish1234@cluster0.bz1fp.mongodb.net/auth_prac"
