Added sendmail function

--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ PORT = 8000
 BASE_URL_WSL = http://172.22.126.136:8000/api/v1/
 
 MONGO_URI = "mongodb+srv://admin:sourish1234@cluster0.bz1fp.mongodb.net/auth_prac"
+
+MAILTRAP_HOST = "sandbox.smtp.mailtrap.io"
+MAILTRAP_PORT = 587
+MAILTRAP_MAIL = <maddison53@ethereal.email>
+MAILTRAP_USERNAME = fd7206c56f1df8
+MAILTRAP_PASSWORD = 186540302bc3c7
