Added login-jwt functionality & constants

--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ MAILTRAP_PORT = 587
 MAILTRAP_MAIL = <maddison53@ethereal.email>
 MAILTRAP_USERNAME = fd7206c56f1df8
 MAILTRAP_PASSWORD = 186540302bc3c7
+
+AUTH_REFRESH_TOKEN_SECRET="EzFAdy/aCB5fdVUkAPg/8uQxH6SO/72xOJBnLDMG4C8="
+AUTH_REFRESH_TOKEN_EXPIRY=1d
+AUTH_ACCESS_TOKEN_SECRET="T/8Dd3Y/z2fq/VX5Clz9yVQxUitlWhFlJZmMzp70V5Q="
+AUTH_ACCESS_TOKEN_EXPIRY=15m
